[package]
name = "chat-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.24.2", features = ["full"]}
tokio-io = "0.1.13"
futures = "0.3.25"
bytes = "1.3.0"
tokio-util = {version = "0.7.4", features = ["full"]}
tokio-stream = "0.1.11"
tracing-subscriber = {version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"]}
tracing = "0.1.37"